# resume-builder

./: README.md  pyproject.toml  requirements.txt
docs/: architecture.md  project-overview.md  reference-sources.md
resume_builder/: __main__.py  models.py  pdf_exporter.py  renderers.py  repository.py  validator.py
src/: resume.json
templates/: developer_mono.html.j2
